--- a/requirements.txt
+++ b/requirements.txt
@@ -83,8 +83,8 @@ mkl-service=2.3.0=py37he8ac12f_0
 mkl_fft=1.3.0=py37h54f3939_0
 mkl_random=1.1.1=py37h0573a6f_0
 ncurses=6.2=he6710b0_1
-numpy=1.19.1=py37hbc911f0_0
-numpy-base=1.19.1=py37hfa32c7d_0
+numpy>=1.21
+numpy-base>=1.21
 oauthlib=3.1.1=pyhd3eb1b0_0
 olefile=0.46=py37_0
 openbabel=3.1.1=py37h200e996_1
@@ -93,7 +93,7 @@ openssl=1.1.1k=h27cfd23_0
 opt_einsum=3.3.0=pyhd3eb1b0_1
 pandas=1.2.4=py37ha9443f7_0
 pcre=8.45=h295c915_0
-pillow=9.0.0
+pillow>=9.0.1
 pip=21.1.3=py37h06a4308_0
 pixman=0.40.0=h7b6447c_0
 progressbar2=3.53.1=pypi_0
